[dv] Snippet Generator for Known WDR Registers
The commit includes a snippet generator that uses bn.xor instruction
to generate registers with a known value, zero.

Signed-off-by: Canberk Topal <ctopal@lowrisc.org>

--- a/hw/ip/otbn/dv/rig/rig/configs/base.yml
+++ b/hw/ip/otbn/dv/rig/rig/configs/base.yml
@@ -5,10 +5,11 @@
 gen-weights:
   # Generators that can continue the program
   Branch: 0.1
-  Jump: 0.1
-  Loop: 0.1
+  Jump: 0.2
+  Loop: 0.2
   StraightLineInsn: 1.0
+  KnownWDR: 0.05
 
   # Generators that end the program
   ECall: 1
-  BadInsn: 1
+  BadInsn: 0
